objects/Acv_User__e.object
<CustomObject>
    <description>Channel used to publish ACV User related Events. These will come from the ACV User Contact Record Type</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the User is Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell_Phone_Number__c</fullName>
        <description>Cell phone field mapping from mobile phone</description>
        <label>Cell Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Sf_User_Id__c</fullName>
        <label>Changed By Sf User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Username__c</fullName>
        <label>Changed By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Source__c</fullName>
        <description>Indicates how the record was created using a Picklist field</description>
        <label>Creation Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Categories__c</fullName>
        <description>Indicates the opt out updates this user has selected</description>
        <label>Email Opt Out Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>User Email</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Concat of the Contacts First and Last name</description>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Id__c</fullName>
        <description>The id related to this user which originates from the Identity entity in the entity-breakout</description>
        <label>Identity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Contact record is a Staff member</description>
        <label>Is Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Superuser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates that this user has all permissions without explicitly assigning them</description>
        <label>Is Superuser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>User Phone Number</description>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programmatic_Sms_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Programmatic SMS Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <description>Referral Code applied by the user when creating their account</description>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sms_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates that this user has opted in for SMS messages if True</description>
        <label>Sms Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Guid__c</fullName>
        <description>Indicates the User Guid for this record</description>
        <label>User Guid</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>Indicates the User Id for this event</description>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Zip Code for the User</description>
        <label>Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <description>Indicates the Type of Event being published</description>
        <label>event type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Acv User</label>
    <pluralLabel>Acv Users</pluralLabel>
</CustomObject>